--- a/app/index.html
+++ b/app/index.html
@@ -20,19 +20,23 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div class="container">
+    <div class="container-fluid">
       <div class="row header">
+        <div class="container">
         <ul class="nav nav-pills pull-right">
           <li class="active"><a ng-href="#">Home</a></li>
           <li><a ng-href="#/about">About</a></li>
         </ul>
         <h3 class="text-muted">dota2heroes</h3>
+        </div>
       </div>
 
       <div ng-view=""></div>
 
       <div class="row footer">
-        <p><span class="glyphicon glyphicon-heart"></span> a thing, by Shaun</p>
+        <div class="container">
+          <p><span class="glyphicon glyphicon-heart"></span> a thing, by Shaun</p>
+        </div>
       </div>
     </div>
 
